replaced all isBlank() calls with .trim().isEmpty() since isBlank() appears to not work in Java 8